--- a/email/src/email/paymentEmail.pug
+++ b/email/src/email/paymentEmail.pug
@@ -2,16 +2,7 @@ extends baseEmail
 
 block content
     p Hi #{firstName},
-    p Thank you for your payment for zz with price : pp,
+    p Thank you for your payment for #{plan} with price : #{price},
     p I can confirm that we received this on #{Date.now()}. I have attached a copy of your receipt to this email
-    table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
-        tbody
-            tr
-                td(align='left')
-                    table(role='presentation', border='0', cellpadding='0', cellspacing='0')
-                        tbody
-                            tr
-                                td
-                                    a(href=`${url}`, target='_blank') Upload user photo
-    p If you need any help with booking your next tour, please don't hesitate to contact me!
+    p If you need any help, please don't hesitate to contact me!
     p - Amr Mahmoud Said
